Refs #1931: fix bug IE8: global menu not centered

--- a/cms_frontend/css/ie/ie8-custom.css
+++ b/cms_frontend/css/ie/ie8-custom.css
@@ -317,7 +317,6 @@ display: block;
 
 .global-menu-bar.navbar-collapse {
 border-top-width: 0px;
-max-width: 970px;
 }
 
 .small-logos {
